--- a/tfp_simpleHMM.ipynb
+++ b/tfp_simpleHMM.ipynb
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(), dtype=float32, numpy=1.8265581e-09>"
+       "<tf.Tensor: shape=(), dtype=float32, numpy=-20.120832>"
       ]
      },
      "execution_count": 9,
@@ -188,7 +188,49 @@
     }
    ],
    "source": [
+    "# The log pdf of a week of temperature 0 is:\n",
+    "model.log_prob([0,0,0,0,0,0,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=1.8265581e-09>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "tf.exp(model.log_prob(tf.zeros(shape=[days])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=-25.132751>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The log pdf of a week of temperature 0 is:\n",
+    "model.log_prob([8,8,8,8,8,8,8])"
    ]
   }
  ],
